Ajustado horario do servidor, troca de cores dos botões de saida

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -5,10 +5,10 @@
 		</div>
 		<div class="row">
 			<div class="col-md-offset-4 col-md-7" style="font-size: 1.4em; text-align: right;">Bem vindo <label>{{logado.nome}} {{logado.sobrenome}}</label>!</div>
-			<button ng-click="minimizar()" type="button" class="btn btn-danger btn-default btn-s" ng-show="saidaregistrada">
+			<button ng-click="minimizar()" type="button" class="btn btn-warning btn-s" ng-show="saidaregistrada">
 				<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
 			</button>
-			<button ng-click="sair()" type="button" class="btn btn-warning btn-default btn-s" ng-show="saidaregistrada">
+			<button ng-click="sair()" type="button" class="btn btn-danger btn-s" ng-show="saidaregistrada">
 				<span class="glyphicon glyphicon-time" aria-hidden="true"></span>
 			</button>
 			<br>
