--- a/public/views/relatorio.html
+++ b/public/views/relatorio.html
@@ -7,10 +7,10 @@
             <div class="col-md-offset-4 col-md-7" style="font-size: 1.4em; text-align: right;">Bem vindo <label>{{logado.nome}}
                 {{logado.sobrenome}}</label>!
             </div>
-            <button ng-click="minimizar()" type="button" class="btn btn-danger btn-default btn-s">
+            <button ng-click="minimizar()" type="button" class="btn btn-warning btn-default btn-s">
                 <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
             </button>
-            <button ng-click="sair()" type="button" class="btn btn-warning btn-default btn-s" ng-if="!sohrelat">
+            <button ng-click="sair()" type="button" class="btn btn-danger btn-default btn-s" ng-if="!sohrelat">
                 <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
             </button>
             <br>
