--- a/public/views/relatorio.html
+++ b/public/views/relatorio.html
@@ -62,7 +62,8 @@
             <div>
                 <label>Colaborador:</label> {{mostrausuario}} <br>
                 <label>Horas Mensais Restantes:</label> {{bancomes}} <br>
-                <label>Horas Mensais Justificadas:</label> {{totalHorasJusti.positividade}} {{totalHorasJusti.horas}}:{{totalHorasJusti.minutos}}
+                <label>Horas Mensais Justificadas:</label> {{totalHorasJusti.positividade}} {{totalHorasJusti.horas}}:{{totalHorasJusti.minutos}} <br>
+                <label>Horas Dívidas:</label> {{totalHorasDivida.positividade}} {{totalHorasDivida.horas}}:{{totalHorasDivida.minutos}}
             </div>
 
             <ul class="nav nav-tabs" role="tablist">
